# alisgogo

./: .env  Defys.docx  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  review.docx  tailwind.config.ts  tsconfig.json  tsconfig.server.json
contract/: Anchor.toml
contract/programs/marketplace/: Cargo.toml
contract/programs/marketplace/src/: lib.rs
server/controllers/: authController.js  collectionController.js  nftController.js  productController.js  sizeController.js  userController.js
src/app/: Providers.tsx  layout.tsx
src/app/api/: login.js  register.js
src/app/components/: AddProductModal.tsx  FeaturedCollections.tsx  Navbar.tsx  ProductList.tsx  TrendingCollections.tsx  TrendingDesigners.tsx  TrendingProducts.tsx
src/app/components/ui-landing/: l-categories.tsx  l-collectandauct.tsx  l-header.tsx  l-hero.tsx
src/app/context/: ThemeContext.tsx
src/app/dashboard/: page.tsx
src/app/discover/: page.tsx
src/app/discover/closet/: page.tsx
src/app/landing/: page.tsx
src/app/login/: page.tsx
src/app/marketplace/: ListToken.tsx  page.tsx
src/app/register/: page.tsx
src/app/studio/: page.tsx
src/components/: Card.tsx  FetchAssets.tsx  ImageDropzone.tsx  JSONForm.tsx  JSONUpload.tsx  Skeleton.tsx  Spinner.tsx
src/contexts/: NetworkConfigurationProvider.tsx
src/utils/: fetchAssetsByOwner.ts  getAssets.ts  getNFTs.ts  getToken.ts  getTokenDetails.ts  getTouristSpots.ts  nftMarket.ts  notifications.tsx  uploadToS3.ts
src/utils/idl/: idl.json
src/utils/types/: solana_nft_marketplace.ts
(+31 files in other folders)
